<resources>
    <string name="phone_login">手机号登录</string>
    <string name="email_login">邮箱登录</string>
    <string name="login">登录</string>
    <string name="login_fail">登录失败，请重试</string>
    <string name="email">请输入邮箱</string>
    <string name="password">密码</string>
    <string name="send_code">发送验证码</string>
    <string name="use_phone">使用手机号登录</string>
    <string name="login_error">账号或密码错误</string>
    <string name="use_email">使用邮箱登录</string>
    <string name="input_phone">请输入手机号</string>
</resources>