<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginPhoneActivity">

    <com.brins.baselib.widget.CommonHeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:chv_icon="@drawable/base_icon_back_black"
        app:chv_title="@string/email_login"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ImageView
            android:id="@+id/upper_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/login_icon_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:autofillHints="username"
            android:inputType="phone"
            android:background="#00000000"
            android:hint="@string/input_phone"
            android:padding="5dip"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/cancel_input_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:onClick="onCancelInput"
            android:src="@drawable/login_icon_cancel_input"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_layout_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name">

        <ImageView
            android:id="@+id/down_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/login_icon_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints="password"
            android:background="#00000000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dip"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/getCode_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/send_code"
            android:textColor="@color/default_btn_text"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/use_email"
        android:textColor="@color/common_blue_twelfth"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_psw" />

    <Button
        android:id="@+id/bt_phone_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_shape_rect_r10_blue_gradient_background"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/login_type" />

</androidx.constraintlayout.widget.ConstraintLayout>