<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginSelectActivity">

    <com.brins.baselib.widget.CommonHeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:chv_title="@string/login"
        android:layout_marginTop="20dp"
        app:chv_icon="@drawable/base_icon_back_black"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/base_icon_default_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_email_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_shape_rect_r10_blue_gradient_background"
        android:text="@string/email_login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/btn_phone_login" />

    <Button
        android:id="@+id/btn_phone_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:background="@drawable/login_shape_rect_r10_blue_gradient_background"
        android:text="@string/phone_login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>